--- a/projgallery.html
+++ b/projgallery.html
@@ -19,7 +19,7 @@
         <h1 id="logoTitle" class="text-white text-3xl">Nabeel</h1>
         <img class="block sm:block md:hidden xl:hidden" id="hamburgerIcon" onclick=openHamburg() src="images/menu_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" alt="">
         <ul class="flex hidden sm:hidden md:flex xl:flex">
-            <li class="mr-6 transition hover:text-blue-600 duration-300"><a href="#">Home</a></li>
+            <li class="mr-6 transition hover:text-blue-600 duration-300"><a href="index.html">Home</a></li>
             <li class="mr-6 transition hover:text-blue-600 duration-300"><a href="index.html#aboutMeContainer">About</a></li>
             <li class="mr-6 transition hover:text-blue-600 duration-300"><a href="projgallery.html">My projects</a></li>
             <li class="mr-6 transition hover:text-blue-600 duration-300"><a href="contactme.html">Contact me</a></li>
