--- a/webdevproj.html
+++ b/webdevproj.html
@@ -15,11 +15,11 @@
     
     <!--THIS IS NAVBAR-->
 
-    <nav class="mt-6 ml-8 mr-8 sm:ml-8 sm:mr-8 md:ml-8 md:mr-8 lg:ml-24 lg:mr-24 flex justify-between" id="mainNavbar">
+    <nav class="mt-6 ml-6 mr-6 lg:ml-24 lg:mr-24 flex justify-between" id="mainNavbar">
         <h1 id="logoTitle" class="text-white text-3xl">Nabeel</h1>
         <img class="block sm:block md:hidden xl:hidden" id="hamburgerIcon" onclick=openHamburg() src="images/menu_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" alt="">
         <ul class="flex hidden sm:hidden md:flex xl:flex">
-            <li class="mr-6 transition hover:text-blue-600 duration-300"><a href="index.html">Home</a></li>
+            <li class="mr-6 transition hover:text-blue-600 duration-300"><a href="#">Home</a></li>
             <li class="mr-6 transition hover:text-blue-600 duration-300"><a href="index.html#aboutMeContainer">About</a></li>
             <li class="mr-6 transition hover:text-blue-600 duration-300"><a href="projgallery.html">My projects</a></li>
             <li class="mr-6 transition hover:text-blue-600 duration-300"><a href="contactme.html">Contact me</a></li>
@@ -48,7 +48,7 @@
     <p class="text-gray-400 text-center mt-24">Project Gallery</p>
     <h1 id="projectMainTitle" class="text-white text-center text-4xl mb-12">Web Development</h1>
     
-    <div class="flex flex-col lg:flex-row gap-8 lg:gap-32 ml-8 mr-8 lg:ml-24 lg:mr-24 xl:ml-48 xl:mr-48 mt-16 lg:mt-24">
+    <div class="flex flex-col lg:flex-row gap-8 lg:gap-32 ml-6 mr-6 lg:ml-24 lg:mr-24 xl:ml-48 xl:mr-48 mt-16 lg:mt-24">
 
         <div class="flex flex-col" id="project1Container">
             <img src="images/Web Dev Proj Images/bojongrobot.png" alt="" class="w-base md::w-2/3 xl:w-base mx-auto rounded-2xl">
