--- a/contactme.html
+++ b/contactme.html
@@ -15,7 +15,7 @@
     
     <!--THIS IS NAVBAR-->
 
-    <nav class="mt-6 ml-8 mr-8 sm:ml-8 sm:mr-8 md:ml-8 md:mr-8 lg:ml-24 lg:mr-24 flex justify-between">
+    <nav class="mt-6 ml-6 mr-6 lg:ml-24 lg:mr-24 flex justify-between">
         <h1 id="logoTitle" class="text-white text-3xl">Nabeel</h1>
         <img class="block sm:block md:hidden xl:hidden" id="hamburgerIcon" src="images/menu_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" onclick="openHamburg()" alt="">
         <ul class="flex hidden sm:hidden md:flex xl:flex">
@@ -51,7 +51,7 @@
     <!--THIS IS THE LEFT SIDE-->
 
         <div class="flex flex-col justify-center">
-            <div class="ml-8 mr-8 xl:ml-0 xl:mr-0 w-5/6">
+            <div class="ml-6 mr-6 xl:ml-0 xl:mr-0 w-5/6">
                 <h1 class="text-white text-4xl mb-4 mt-28 lg:mt-0" id="contactTitle">Let's Connect</h1>
                 <p class="text-gray-400">Feel free to reach out! Whether you have a question, a project idea, or just want to say hello, I’d love to hear from you. 
                     Use the form below or connect with me through email or social media. Let’s get in touch!</p>
